[package]
name = "solana-bls12-381-tests"
version = "0.1.0"
authors = ["Eclispse Laboratories Inc"]
repository = "https://github.com/Eclipse-Laboratories-Inc/solar-eclipse"
license = "Apache-2.0"
edition = "2021"
publish = false

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = { path = "../../program-test", version = "=1.15.2" }
rand = "0.7.0"
solana-sdk = { path = "../../sdk", version = "=1.15.2" }
# Because of a lack of maintenance, the `rand_chacha` crate causes conflicts with the current version of solar eclipse. Thus we can't really import it 
# ursa = "0.3.7"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
